syntax = "proto3";

package product;

import "common.proto";

message CreateCategory {
  string storeId = 1;
  string name = 2;
  optional string description = 3;
  optional string image = 4;
}

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
  string storeId = 4;
  string image = 5;
  google.protobuf.Timestamp created_at = 6;
}

enum CategorySortBy {
  NAME = 1;
  DATE = 2;
}

message CategoryQuery {
  optional int32 page = 1;
  optional int32 pageSize = 2;
  optional common.SortOrder order = 3;
  optional CategorySortBy sortBy = 4;
  optional string name = 5;
  optional string storeId = 6;
}

message CategoryList {
  repeated Category docs = 1;
  int32 totalDocs = 2;
  int32 limit = 3;
  optional int32 page = 4;
  int32 totalPages = 5;
  int32 pagingCounter = 6;
  bool hasPrevPage = 7;
  bool hasNextPage = 8;
  optional int32 prevPage = 9;
  optional int32 nextPage = 10;
  int32 offset = 11;
}

message PartialCategoryInput {
  optional string name = 1;
  optional string description = 2;
  optional string image = 3;
}

message UpdateCategory {
  string id = 1;
  PartialCategoryInput data = 2;
}

service CategoryService {
  rpc Create (CreateCategory) returns (Category) {}
  rpc Get (common.Id) returns (Category) {}
  rpc List (CategoryQuery) returns (CategoryList) {}
  rpc Update (UpdateCategory) returns (common.Status) {}
  rpc Delete (common.Id) returns (common.Status) {}
}